pygi-value: special case for NULL GValueArray

Don't segfault when dealing with GValue of GValueArray type containing
NULL. Return empty list in this case.

https://bugzilla.gnome.org/show_bug.cgi?id=754359